<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.debarnab.cucumber</groupId>
    <artifactId>CukesWithPOM</artifactId>
    <version>1</version>
    <packaging>jar</packaging>

    <name>CukesWithPOM</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>8</java.version>
    </properties>

    <dependencies>

        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-testng -->
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>1.2.5</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-core -->
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>1.2.5</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.9.10</version>
            <scope>test</scope>
        </dependency>


        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>1.2.5</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>cucumber-reporting</artifactId>
            <version>3.9.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>2.53.0</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>

        <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.github.detro.ghostdriver/phantomjsdriver &ndash;&gt;-->
        <!--<dependency>-->
            <!--<groupId>com.github.detro.ghostdriver</groupId>-->
            <!--<artifactId>phantomjsdriver</artifactId>-->
            <!--<version>1.1.0</version>-->
        <!--</dependency>-->

        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.2.5</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>com.vimalselvam</groupId>
            <artifactId>cucumber-extentsreport</artifactId>
            <version>3.0.2</version>
        </dependency>

        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>3.1.2</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-compiler-plugin</artifactId>-->
                <!--<version>3.3</version>-->
                <!--<configuration>-->
                    <!--<source>1.${java.version}</source>-->
                    <!--<target>1.${java.version}</target>-->
                <!--</configuration>-->
            <!--</plugin>-->

            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-surefire-plugin</artifactId>-->
                <!--<version>2.18.1</version>-->
                <!--<configuration>-->
                    <!--<testFailureIgnore>true</testFailureIgnore>-->
                    <!--<includes>-->
                        <!--<exclude>**/*Test.java</exclude>-->
                    <!--</includes>-->
                <!--</configuration>-->
            <!--</plugin>-->
            <!--newly added sure fire plugin for parallel tests-->

            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-surefire-plugin</artifactId>-->
                <!--<version>2.21.0</version>-->
                <!--<configuration>-->
                    <!--<parallel>classes</parallel>-->
                    <!--<forkMode>perthread</forkMode>-->
                    <!--<threadCount>6</threadCount>-->
                    <!--&lt;!&ndash;<forkCount>3</forkCount>&ndash;&gt;-->
                    <!--&lt;!&ndash;<reuseForks>true</reuseForks>&ndash;&gt;-->
                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                    <!--&lt;!&ndash;<systemPropertyVariables>&ndash;&gt;-->
                        <!--&lt;!&ndash;<databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>&ndash;&gt;-->
                    <!--&lt;!&ndash;</systemPropertyVariables>&ndash;&gt;-->
                    <!--&lt;!&ndash;<workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>&ndash;&gt;-->
                    <!--<includes>**/*Runner.java</includes>-->
                <!--</configuration>-->
            <!--</plugin>-->

            <!--For jvm parallel running-->
            <plugin>
                <groupId>com.github.temyers</groupId>
                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
                <version>4.2.0</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>generateRunners</goal>
                        </goals>
                        <configuration>
                            <glue>
                                <package>com.debarnab.cucumber</package>
                            </glue>
                            <outputDirectory>target/generated-test-sources/cucumber</outputDirectory>
                            <featuresDirectory>src/test/resources/</featuresDirectory>
                            <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
                            <namingPattern>Parallel{c}IT</namingPattern>
                            <!-- One of [SCENARIO, FEATURE]. SCENARIO generates one runner per scenario.  FEATURE generates a runner per feature. -->
                            <parallelScheme>FEATURE</parallelScheme>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.19.1</version>
                <executions>
                    <execution>
                        <id>acceptance-test</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                        <configuration>
                            <forkCount>10</forkCount>
                            <reuseForks>true</reuseForks>
                            <includes>
                                <include>**/*IT.class</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>




            <!--The below plugin is for reporting-->

            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>2.0.0</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>cucumber-jvm-example</projectName>
                            <outputDirectory>${project.build.directory}/site/cucumber-reports</outputDirectory>
                            <cucumberOutput>${project.build.directory}/cucumber-parallel/1.json</cucumberOutput>
                            <cucumberOutput>${project.build.directory}/cucumber-parallel/2.json</cucumberOutput>
                            <cucumberOutput>${project.build.directory}/cucumber-parallel/3.json</cucumberOutput>
                            <cucumberOutput>${project.build.directory}/cucumber-parallel/4.json</cucumberOutput>
                            <cucumberOutput>${project.build.directory}/cucumber-parallel/5.json</cucumberOutput>
                            <skippedFails>true</skippedFails>
                            <!--<enableFlashCharts>false</enableFlashCharts>-->
                            <buildNumber>42</buildNumber>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <!--added below the parallel running capability-->



        </plugins>
    </build>


</project>
